# Co-design-optimisation

./: README.md
MultirotorSim_Vervoorst/install/share/sim_multi/: package.xml
MultirotorSim_Vervoorst/install/share/sim_multi/cmake/: sim_multiConfig.cmake
MultirotorSim_Vervoorst/src/sim_multi/: CMakeLists.txt  packageInfo.mat
MultirotorSim_Vervoorst/src/sim_multi/include/sim_multi/: Sim_Multi.h  multiword_types.h  rt_defines.h  rtmodel.h  rtwtypes.h  visibility_control.h
MultirotorSim_Vervoorst/src/sim_multi/src/: Sim_Multi_data.cpp  rtGetInf.cpp  rtmodel.cpp
src/aerofoil/: CMakeLists.txt  Trial76_random_design_1.mat  Trial76_random_design_2.mat  Trial77_random_design.mat  Trial78_random_design.mat  Trial79_random_design.mat  Trial80_random_design.mat  Trial84_random_design.mat
src/aerofoil/env/: aerofoil.cpp  aerofoil.h  aerofoil_private.h  aerofoil_types.h  aerofoil_wrapper.cpp  buildInfo.mat  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h
src/aerofoil/env/html/data/: data.js  model.js
src/aerofoil/env/html/pages/: aerofoil_survey.html
src/aerofoil/rl/: MPC.py  MPC_CONTROL_TEST.py  MPC_control.py  MPC_control_UAV.py  MPC_control_gust.py  MPC_control_updated.py  delta.mat  env_LQR copy.py  env_LQR.py  env_MPC_HEBO.py  env_aerofoil.py  eval.py  eval_aerofoil.py  pitch.mat  state_space.py  state_space_LQR.py  state_space_LQR_gust.py  state_space_Rafa.py  state_space_reviewed.py  test.py  train.py  train_MPC.py  untitled0.py
src/aerofoil/rl/trained_model/: Trial139_random_design.mat  Trial140_random_design.mat  Trial141_random_design.mat  Trial154_random_design.mat  Trial155_random_design.mat  Trial164_random_design.mat  Trial165_random_design.mat  Trial173_random_design.mat  Trial174_random_design.mat  Trial186_random_design.mat  test.py
src/aerofoil/rl/trained_model/Trial186_random_design_1/: data  policy.optimizer.pth  policy.pth
src/aerofoil/rl/trained_model/Trial186_random_design_5/: data  policy.optimizer.pth  policy.pth  system_info.txt
src/aerofoil/rl/trained_model/Trial84_random_design_4/: data  policy.optimizer.pth  policy.pth
src/aerofoil/rl/trained_model/bestHeboDesign_Trial165_random_design/: data  policy.optimizer.pth  policy.pth
src/cart_pole/: CMakeLists.txt  package.xml
src/cart_pole/Gauss_optimiser/SGD/: script_DiagGaussianDistribution  script_DiagGaussianDistribution_PPO  script_MultivariateNormal.py
src/cart_pole/Gauss_optimiser/adam/: script_DiagGaussianDistribution  script_DiagGaussianDistribution_PPO  script_LowRankMultivariateNormal.py  script_MultivariateNormal.py
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_1/: events.out.tfevents.1695157537.divij.6595.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_2/: events.out.tfevents.1695157613.divij.6674.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_3/: events.out.tfevents.1695157645.divij.6745.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_4/: events.out.tfevents.1695157776.divij.7316.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_81920000_lr0.0003_hidden_sizes_128_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_1/: events.out.tfevents.1695099978.divij.59822.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_81920000_lr0.0003_hidden_sizes_128_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_2/: events.out.tfevents.1695101694.divij.4448.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_81920000_lr0.0003_hidden_sizes_128_lay2_rewardUpRight_1002_polemass_GaussMix/PPO_3/: events.out.tfevents.1695101742.divij.4548.0
src/cart_pole/cartpole_tensorboard/CartPoleEnv_Tanh_Tsteps_81920000_lr0.0003_hidden_sizes_128_lay2_rewardUpRight_[1. 1.]_polemass_GaussMix/PPO_1/: events.out.tfevents.1695052330.divij.17183.0  events.out.tfevents.1695052369.divij.17317.0
src/cart_pole/cartpole_tensorboard/TB_CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_reward_122_varPoleMass_GaussMix/PPO_1/: events.out.tfevents.1695740509.divij.83431.0
src/cart_pole/cartpole_tensorboard/TB_CartPoleEnv_Tanh_Tsteps_122880000_lr0.0001_hidden_sizes_256_lay2_reward_122_varPoleMass_GaussMix/PPO_2/: events.out.tfevents.1695744290.divij.83899.0
src/cart_pole/cartpole_tensorboard/TB_CartPoleEnv_Tanh_Tsteps_245760000_lr0.0001_hidden_sizes_256_lay2_reward_122_varPoleMass_GaussMix/PPO_1/: events.out.tfevents.1695740458.divij.83322.0
src/cart_pole/cartpole_tensorboard/TB_CartPole_FixedDesign_chop_Tanh_Tsteps_1024000000_lr_0.0001_hidden_sizes_256_reward_1.00.20.5_pole_length_2.0/PPO_1/: events.out.tfevents.1698853845.divij.262451.0
src/cart_pole/design_optmisation/: Diag_Gaussmixture_model.py  Ngauss.py  desig_opt_pytorch.py  design_opt_adam.py  gaussian_dist.py  hebo_opt.py  hope.py  multi_var_dist.py  multi_var_log.py  multi_var_log_Hessian.py  schaff.py  secondOrder.py  test.py
src/cart_pole/env/: CMakeLists.txt  aerofoil.cpp  aerofoil.h  aerofoil_data.cpp  aerofoil_private.h  aerofoil_types.h  buildInfo.mat  builtin_typeid_types.h  cart_pole_system_dynamics0.cpp  cart_pole_system_dynamics0.h  cart_pole_system_dynamics0_data.cpp  cart_pole_system_dynamics0_private.h  cart_pole_system_dynamics0_types.h  cartpole_Model_wrapper.cpp  multiword_types.h  rtGetNaN.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
src/cart_pole/model_test/data/: input_cmd.mat  manual_simulink.mat  results.mat
src/cart_pole/model_test/scripts/: env_cartpole.py  run_matlab_env.py  run_openAI_env.py  run_test.py
src/cart_pole/rl/: CNN_policy.py  env_cartpole.py  env_cartpole_copy.py  env_train_openAI.py  eval.py  eval_constant_length.py  gaussMix_design_opt.py  optimise_hebo.py  single_env_eval.py  test.py  train.py
(+3022 files in other folders)
